[package]
name = "external-service"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# third-party dependencies
codec = { workspace = true, default-features = true }
log = { workspace = true,  default-features = true }
serde_json = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
tide = { version = "0.16.0" }
web3 = { version = "0.19.0", default-features = false, features = [
    "http-tls",  # implies tls feature
    "signing",
] }

jsonrpsee.workspace = true
futures.workspace = true
anyhow.workspace = true
jsonrpc-core.workspace = true

# This version must be compatible with web3
tokio = { version = "1.19", features = ["sync"] }

hex = { workspace = true, default-features = true }
hex-literal = "0.4.1"
# Ensure compatibility by matching sp-core's secp256k1 version. Let cargo handle exact version matching.
secp256k1 = { version = ">0.27.0", features = [
    "recovery",
    "alloc",
] }
web3Secp256k1 = { package = "secp256k1", version = "0.27.0", features = [
    "recovery",
    "alloc",
] }


# This needs to be the same version as the one used in web3, parity-scale-codec and ethereum-transactions pallet
ethereum-types = "0.14.1"

pallet-eth-bridge-runtime-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }

# primitives
sp-avn-common = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }

# client dependencies
sc-keystore = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-client-db = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }

node-primitives = { default-features = true, workspace = true }
client-extrinsic-utils.workspace = true