[package]
name = "external-service"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.1" }
structopt = "0.3.8"
log = "0.4.20"
serde_json = "1.0.85"
serde = "1.0.195"
tide = { version = "0.16.0" }
web3 = { version = "0.19.0", default-features = false, features = [
    "http-tls",
    "signing",
] } # implies tls feature
jsonrpsee = { version = "0.20.3", features = ["server"] }
futures = "0.3.28"
anyhow = "1.0.64"
jsonrpc-core = "18.0.0"

# This version must be compatible with web3
tokio = { version = "1.19", features = ["sync"] }

hex = "0.4"
hex-literal = "0.4.1"
# Ensure compatibility by matching sp-core's secp256k1 version. Let cargo handle exact version matching.
secp256k1 = { version = ">0.27.0", features = [
    "recovery",
    "alloc",
] }
web3Secp256k1 = { package = "secp256k1", version = "0.27.0", features = [
    "recovery",
    "alloc",
] }


# This needs to be the same version as the one used in web3, parity-scale-codec and ethereum-transactions pallet
ethereum-types = "0.14.1"

pallet-eth-bridge-runtime-api = { path = "../../pallets/eth-bridge/runtime-api"}
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }

# primitives
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-avn-common = { path = "../../primitives/avn-common"}
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }

# client dependencies
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }

node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
client-extrinsic-utils = { path = "../extrinsic-utils" }