[package]
name = "client-extrinsic-utils"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# third-party dependencies
codec = { workspace = true, default-features = true }
log = { workspace = true,  default-features = true }
serde = { workspace = true, default-features = true }
anyhow.workspace = true

# primitives
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

# client dependencies
sc-service = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-client-db = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }

[dev-dependencies]
hex = { workspace = true, default-features = true }
hex-literal = "0.4.1"
