[package]
name = "avn-service"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0" }
structopt = "0.3.8"
log = "0.4.8"
serde_json = "1.0"
serde = "1.0.143"
tide = { version = "0.16.0"}
web3 = { version = "0.18.0", default-features = false, features = ["http-tls", "signing"]} # implies tls feature
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.24"
anyhow = "1.0.64"
jsonrpc-core = "18.0.0"

# This version must be compatible with web3
tokio = { version = "1.19", features = ["sync"] }

hex = "0.4"
secp256k1 = { version = "0.24.0", default-features = false, features = ["recovery", "alloc"]}
web3Secp256k1 = { package = "secp256k1", version = "0.21.2", default-features = false, features = ["recovery", "alloc"]}
# This needs to be the same version as the one used in web3, parity-scale-codec and ethereum-transactions pallet
ethereum-types = "0.11.0"

# primitives
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-avn-common = { path = "../../primitives/avn-common", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# client dependencies
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
