[package]
name = "pallet-authors-manager"
description = "Pallet to manage authors of the chain"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
codec = { workspace = true, features = ["derive"] }
scale-info.workspace = true
serde = { workspace = true, optional = true }
hex.workspace = true
hex-literal = { version = "0.4.1", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac","static-context"
], optional = true }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false, optional = true }
sha3 = { version = "0.8", default-features = false, optional = true }

sp-avn-common.workspace = true
pallet-avn.workspace = true

sp-std.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true

frame-support.workspace = true
frame-system.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-timestamp.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
sp-application-crypto.workspace = true
pallet-balances = { workspace = true, default-features = true }
parking_lot = { version = "0.12.0" }
sp-state-machine.workspace = true
substrate-test-utils.workspace = true
pallet-eth-bridge = { workspace = true, default-features = true }

[features]
default = ["std", "pallet-session/historical"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"serde/std",
	"hex/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
	"pallet-avn/std",
	"pallet-eth-bridge/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"libsecp256k1?/std",
	"rand?/std",
	"sha3?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"rand",
	"libsecp256k1",
	"sha3",
]
try-runtime = ["frame-support/try-runtime"]