[package]
name = "pallet-avn-anchor"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
codec.workspace = true
scale-info.workspace = true

sp-avn-common.workspace = true
pallet-avn.workspace = true

sp-std.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true

frame-support.workspace = true
frame-system.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }
sp-application-crypto.workspace = true

[dev-dependencies]
parking_lot.workspace = true
sp-io = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
pallet-scheduler.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp.workspace = true

pallet-avn-proxy = { workspace = true, default-features = true }
pallet-token-manager = { workspace = true, default-features = true }
pallet-eth-bridge  = { workspace = true, default-features = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
	"pallet-avn/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
