[package]
name = "pallet-avn-offence-handler"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
codec = { package = "parity-scale-codec", version = "3.0.0",  default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-avn-common = { default-features = false, path = "../../primitives/avn-common" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-staking = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36"  }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-avn = { default-features = false, path = "../avn" }
pallet-session = {  default-features = false, features = ["historical"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# Optional imports for benchmarking
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", optional = true }

[dev-dependencies]
serde = { version = "1.0.101"}
parking_lot = { version = "0.12.0" }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "pallet-avn/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]