[package]
name = "pallet-avn-offence-handler"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
codec.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
frame-system.workspace = true
frame-support.workspace = true

sp-avn-common.workspace = true
pallet-avn.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
serde.workspace = true
parking_lot.workspace = true
sp-io.workspace = true
sp-state-machine = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "pallet-avn/std",
    "sp-avn-common/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]